=== shared-mime-info 0.30 ===

2008-05-12  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.30

2008-05-12  Bastien Nocera  <hadess@hadess.net>

	* HACKING: Add link to the TP's maintainer corner

2008-05-12  Bastien Nocera  <hadess@hadess.net>

	* HACKING: Add mention of the update-translations target
	* Makefile.am: add the update-translations which pulls the latest
	translations from the Translation Project

2008-05-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Some string review courtesy of Benno
	Schulenberg <bensberg@justemail.net>

2008-04-30  Bastien Nocera  <hadess@hadess.net>

	* HACKING: Add details on how to update the spec on the website

2008-04-23  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: More than just application/ mime-type need generic-icon
	* freedesktop.org.xml.in: add generic-icon to a few message/
	mime-types, as well as to the VRML mime-type

2008-04-23  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix FIXMEs for the generic icons, fix a few
	archives' acronyms, remove the text/x-ksysv-log mime-type which
	doesn't have a comment, and doesn't seem to be used anymore

2008-04-23  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Tighten the DTD as to the allowed values for
	the generic-icon needing to be listed in the Icon Naming spec

2008-04-23  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/internet.ez:
	* tests/list: Add test file for Andrew insets, and fix generic-icon

2008-04-23  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Remove the tests below, and modify the DTD to not allow
	acronyms without an expanded-acronym, and mime-types without comments
	* freedesktop.org.xml.in: Add generic-icons to all the application/
	mime-type, with a few FIXMEs, remove duplicated StuffIt mime-type, but
	keep the aliases, fix a few mime-types without comments, and missing
	acronyms or expanded-acronyms
