@@ -1,3 +1,8 @@
+2008-05-13  Bastien Nocera  <hadess@hadess.net>
+
+	* Makefile.am: Check that all the translations are actually
+	shipped when doing a translation update
+
 === shared-mime-info 0.30 ===
 
 2008-05-12  Bastien Nocera  <hadess@hadess.net>
